--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+patchimage (7.0.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+  * install 32bit pre-compiled tools into patchimage-tools-i386 package
+  * install 64bit pre-compiled tools into patchimage-tools-amd64 package
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Sat, 06 Aug 2016 09:59:46 +0200
+
 patchimage (6.3.0-1nano) unstable; urgency=low
 
   * new upstream stable release
