new download link for RVLution Wii

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ v7.1.0:
 
 ::misc. changes
 - removed download link for Awesomer Super Luigi Mini (down)
+- new download link for RVLution Wii
 
 ::game additions
 
