--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@ v7.1.0:
 - removed download link for Awesomer Super Luigi Mini (down)
 - new download link for RVLution Wii
 - fix download link for Midi's Super Mario Wii
+- update nsmbw.db
 
 ::game additions
 
