--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ v7.1.0:
 ::misc. changes
 - removed download link for Awesomer Super Luigi Mini (down)
 - new download link for RVLution Wii
+- new download link for Newer Falling Leaf
 - fix download link for Midi's Super Mario Wii
 - fix download link for Newer Apocalypse
 - update nsmbw.db
