--- a/ChangeLog
+++ b/ChangeLog
@@ -51,6 +51,13 @@ v7.2.0:
 ::misc. changes
 - new download link for The Legend of Yoshi
 
+::mod additions:
+- Mario Kart Wii:
+  - added Super Mario Font
+  - added Chalky Font
+  - added UmePlus Font
+  - sort files alphabetically in list
+
 ::game additions
 
 :::New Super Mario Bros. Wii
