add new custom karts for Mario Kart Wii

--- a/ChangeLog
+++ b/ChangeLog
@@ -52,11 +52,20 @@ v7.2.0:
 - new download link for The Legend of Yoshi
 
 ::mod additions:
-- Mario Kart Wii:
+- Mario Kart Wii Fonts:
   - added Super Mario Font
   - added Chalky Font
   - added UmePlus Font
   - sort files alphabetically in list
+- Mario Kart Wii Karts:
+  - update Sonic the Hedgehog on Foot to version 1.5
+  - add Black Mage on Wii Remote
+  - add White Mage on Wii Remote
+  - add Kirby on Wheelie
+  - add Nabbit on Flame Runner
+  - add Skull Kid on Bullet Bike
+  - add Super Sonic on Mach Bike
+  - add Wolf Link on Mach Bike
 
 ::game additions
 
