update to version 1.02 of New Super Mario Bros. Wii - Other World

--- a/ChangeLog
+++ b/ChangeLog
@@ -50,7 +50,8 @@ v7.2.0:
 
 ::misc. changes
 - new download link for The Legend of Yoshi
-- update to the latest The Legend of Yoshi
+- update to version 2016-05-28 of The Legend of Yoshi
+- update to version 1.02 of New Super Mario Bros. Wii - Other World
 
 ::mod additions:
 - Mario Kart Wii Fonts:
