--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (7.2.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Mon, 22 Aug 2016 19:15:47 +0200
+
 patchimage (7.0.0-1nano) unstable; urgency=low
 
   * new upstream stable release
