--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+v7.2.2:
+::bug fixes
+- fix PATCHIMAGE_3DS_DIR setup when no ${HOME}/.patchimage.rc exists
+- fix PATCHIMAGE_ROM_DIR setup when no ${HOME}/.patchimage.rc exists
+
 v7.2.1:
 ::bug fixes
 - fix ID for Kirby's Adventure Wii and Mario Kart Wii for US versions
