--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ v7.2.2:
 ::bug fixes
 - fix PATCHIMAGE_3DS_DIR setup when no ${HOME}/.patchimage.rc exists
 - fix PATCHIMAGE_ROM_DIR setup when no ${HOME}/.patchimage.rc exists
+- fixed that the script expected wrong parameter --show-downloadlink
+  instead of correct --show-download
 - fix error messages or required user-input during batch-build by
   creating a separate build directory, then create the mod and before
   the next build is done that build directory is removed and re-created
