--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+v7.3.0 (---):
+::internal changes:
+- modularize common.sh
+
 v7.2.2 (20160823):
 ::bug fixes
 - fix PATCHIMAGE_3DS_DIR setup when no ${HOME}/.patchimage.rc exists
