--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (7.3.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Sat, 27 Aug 2016 11:03:41 +0200
+
 patchimage (7.2.2-1nano) unstable; urgency=low
 
   * new upstream bugfix release
