--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ v7.4.0:
     - if you want to re-download the files regardless, simply use --download
       this will trigger re-download (unlike for Riivolution archives, where
       --download will not re-download if the file[s] were found)
+  - for xdelta patches and original cpk files, now check whether every single
+    file exists, rather than just one of them
   - for cpk file path support both the top level directory of the dump as well
     as the sub level directory which holds the cpk files, read: when your dump
     is in
