--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ v7.4.0:
 - use 'wget -nv' instead of 'wget -q'
 - update Cliff Super Mario Bros. Wii to version 1.1.1
 - update Revised Super Mario Bros. Wii to version 1.1
+- update The Legend of Yoshi to version 2016-08-31
 - improved Tokyo Mirage Sessions #FE Restoration Patcher:
   - use 'Restoration' instead of 'Uncensored' as Name
   - more failsafe build-directory name
