--- a/ChangeLog
+++ b/ChangeLog
@@ -1,28 +1,25 @@
 v7.4.0:
-::misc. changes:
-- use 'wget -nv' instead of 'wget -q'
-  - except for cover downloader
+::Tokyo Mirage Sessions #FE Restoration Patcher
+- use 'Restoration' instead of 'Uncensored' as Name
+- more failsafe build-directory name
+- add support for downloading xdelta files with --download
+- check whether files have already been downloaded and use those
+- for xdelta patches and original cpk files, now check whether every single
+  file exists, rather than just one of them
+- for cpk file path support both the top level directory of the dump as well
+  as the sub level directory which holds the cpk files, read: when your dump
+  is in /home/test/TMSFE you were previously required to set the cpk path to
+  /home/test/TMSFE/vol/content/Pack now using /home/test/TMSFE will work, too,
+  as the script will look for the sub directory vol/content/Pack on it's own
+
+::game updates:
 - update Cliff Super Mario Bros. Wii to version 1.1.1
 - update Revised Super Mario Bros. Wii to version 1.1
 - update The Legend of Yoshi to version 2016-08-31
-- improved Tokyo Mirage Sessions #FE Restoration Patcher:
-  - use 'Restoration' instead of 'Uncensored' as Name
-  - more failsafe build-directory name
-  - add support for downloading xdelta files with --download
-  - check whether files have already been downloaded and use those
-  - for xdelta patches and original cpk files, now check whether every single
-    file exists, rather than just one of them
-  - for cpk file path support both the top level directory of the dump as well
-    as the sub level directory which holds the cpk files, read: when your dump
-    is in
-	/home/test/TMSFE
-    you were previously required to set the cpk path to
-	/home/test/TMSFE/vol/content/Pack
-    now using
-	/home/test/TMSFE
-    will work, too, as the script will look for the sub directory
-	vol/content/Pack
-    on it's own
+
+::misc. changes:
+- use 'wget -nv' instead of 'wget -q'
+  - except for cover downloader
 
 v7.3.1.1 (20160829):
 ::bug fixes
