--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (7.4.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Sat, 03 Sep 2016 11:33:09 +0200
+
 patchimage (7.3.0-1nano) unstable; urgency=low
 
   * new upstream stable release
