--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+v7.5.0 ():
+::game additions:
+- add support for Super Mario Bros. Frozen Editon
+
 v7.4.0 (20160903):
 ::Tokyo Mirage Sessions #FE Restoration Patcher
 - use 'Restoration' instead of 'Uncensored' as Name
