--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+v7.6.0 (----):
+::game updates:
+- Pokemon Rising Ruby: support version 2.1
+- Pokemon Sinking Sapphire: support version 2.1
+- support Wiimms Mario Kart Fun 2016-10
+
+::tools updates:
+- update WIT to 2.40a
+- update SZS to 1.53a
+
 v7.5.0 (20160927):
 ::game additions:
 - add support for Super Mario Bros. Frozen Editon
