update title database

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ v7.6.0 (----):
 - update WIT to 2.40a
 - update SZS to 1.53a
 
+::misc. changes:
+- update title database
+
 v7.5.0 (20160927):
 ::game additions:
 - add support for Super Mario Bros. Frozen Editon
