--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ v7.6.0 (----):
 - Pokemon Rising Ruby: support version 2.1
 - Pokemon Sinking Sapphire: support version 2.1
 - support Wiimms Mario Kart Fun 2016-10
+- support Wiimms Mario Kart Fun 2017-05
 - support Newer Super Luigi Wii: Dark Moon (@lordofpeace)
 
 ::tools updates:
